--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset='utf-8'>
-    
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-
 </head>
 
 <body>
-    <!-- {% include header.html %} -->
-
-    <!-- {{ content }} -->
+    {% include header.html %}
+    {% include t.md %}
 <hr>
 </body>
 </html>
