--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@
 
 <body>
     {% include header.html %}
-    {% include t.md %}
     {{ content }}
+    {% include t.html %}
+    
 <hr>
 </body>
 </html>
