--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
     <h1><a href='{{ site.url }}/'>{{ site.name }}</a></h1>
 </header>
-<a href='{{ site.url }}/'> Pages</a> 
+<!-- <a href='{{ site.url }}/'> Pages</a>  -->
